// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Snapshot renders the UI snapshot correctly 1`] = `
<form
  className="css-1xdhyk6"
  data-testid="ds-form"
  id="ds-form-snapshot-form"
>
  <div
    className="css-fadkce"
    id="ds-form-snapshot-form-parent"
  >
    <div
      className="css-dofnwd"
      id="ds-form-snapshot-form-child0"
    >
      <div
        className="css-7ajbp2"
        id="ds-form-snapshot-form-child0-grandchild0"
      >
        Form Field 1
      </div>
      <div
        className="css-7ajbp2"
        id="ds-form-snapshot-form-child0-grandchild1"
      >
        Form Field 2
      </div>
      <div
        className="css-7ajbp2"
        id="ds-form-snapshot-form-child0-grandchild2"
      >
        Form Field 3
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Snapshot renders the UI snapshot correctly 2`] = `
<form
  className="css-16h1ce8"
  data-testid="ds-form"
  id="ds-form-chakra"
>
  <div
    className="css-fadkce"
    id="ds-form-chakra-parent"
  >
    <div
      className="css-dofnwd"
      id="ds-form-chakra-child0"
    >
      <div
        className="css-7ajbp2"
        id="ds-form-chakra-child0-grandchild0"
      >
        Form Field 1
      </div>
      <div
        className="css-7ajbp2"
        id="ds-form-chakra-child0-grandchild1"
      >
        Form Field 2
      </div>
      <div
        className="css-7ajbp2"
        id="ds-form-chakra-child0-grandchild2"
      >
        Form Field 3
      </div>
    </div>
  </div>
</form>
`;

exports[`Form Snapshot renders the UI snapshot correctly 3`] = `
<form
  className="css-1xdhyk6"
  data-testid="props"
  id="ds-form-props"
>
  <div
    className="css-fadkce"
    id="ds-form-props-parent"
  >
    <div
      className="css-dofnwd"
      id="ds-form-props-child0"
    >
      <div
        className="css-7ajbp2"
        id="ds-form-props-child0-grandchild0"
      >
        Form Field 1
      </div>
      <div
        className="css-7ajbp2"
        id="ds-form-props-child0-grandchild1"
      >
        Form Field 2
      </div>
      <div
        className="css-7ajbp2"
        id="ds-form-props-child0-grandchild2"
      >
        Form Field 3
      </div>
    </div>
  </div>
</form>
`;
